todas as rotas em manutenção

--- a/public/index.html
+++ b/public/index.html
@@ -51,7 +51,8 @@
 <body>
 
 <div class="card">
-  <img src="image/vale2.png" alt="Logo Vale">
+  <img src="image/vale.png" alt="">
+  
   <h1>Em manutenção</h1>
   <h2>Escalando para nível gerencial</h2>
 
