--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -1,98 +1,347 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Revezamento - Manutenção</title>
-<link rel="icon" type="image/png" href="image/vale.png" />
-<style>
-  * {
-    margin:0; padding:0; box-sizing:border-box; font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Dashboard B</title>
+  <link rel="icon" type="image/png" href="image/turmaB.jpeg">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <style>
+body {
+  font-family: 'Roboto', sans-serif;
+  background: #f4f7fc;
+  padding-top: 40px;
+  color: #333;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+/* NOVO: painel fixo pequeno e simples no topo */
+#status-summary {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background: #fff;
+  border-bottom: 1px solid #ddd;
+  box-shadow: 0 2px 5px rgba(0,0,0,0.05);
+  display: flex;
+  justify-content: center;
+  gap: 2rem;
+  padding: 6px 10px;
+  font-size: 0.9rem;
+  font-weight: 600;
+  color: #444;
+  z-index: 1000;
+  font-family: 'Roboto', sans-serif;
+  flex-wrap: nowrap;
+  user-select: none;
+  white-space: nowrap;
+}
+
+#status-summary span {
+  display: flex;
+  align-items: center;
+  gap: 6px;
+  flex-shrink: 1;
+  max-width: 120px;       /* Limite máximo de largura */
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
+/* Responsividade */
+@media (max-width: 1024px) {
+  #status-summary {
+    gap: 1.5rem;
+    font-size: 0.85rem;
   }
-  body, html {
-    height:100%;
-    display:flex;
-    justify-content:center;
-    align-items:center;
-    background:#f4f4f4;
+  #status-summary span {
+    max-width: 100px;
   }
-  .container {
-    text-align:center;
-    padding:30px 20px 40px;
-    background:#fff;
-    border-radius:16px;
-    box-shadow:0 10px 25px rgba(0,0,0,0.1);
-    width:100%;
-    max-width:460px;
-    position: relative;
+}
+
+@media (max-width: 768px) {
+  #status-summary {
+    gap: 1rem;
+    font-size: 0.8rem;
   }
-  .container img {
-    width:140px;
-    margin-bottom:25px;
+  #status-summary span {
+    max-width: 90px;
   }
-  h1 {
-    font-size:2.5rem;
-    color:#007E7A;
-    margin-bottom: 18px;
-    animation: pulse 2s infinite;
+}
+
+@media (max-width: 480px) {
+  #status-summary {
+    flex-direction: row;
+    padding: 7px;
+    font-size: 0.70rem;
   }
-  @keyframes pulse {
-    0%, 100% {opacity: 1;}
-    50% {opacity: 0.6;}
+
+  #status-summary span {
+    justify-content: center;
+    max-width: 90%;
+    white-space: normal;
   }
-  .message {
-    font-size:1.15rem;
-    color:#444;
-    margin-bottom: 30px;
+}
+
+
+.status-pendente { color:  #C0305E; }
+.status-concluido { color: #007E7A; }
+.status-andamento { color: #ECB11F; }
+
+/* Mantém os estilos existentes */
+
+.dashboard-card {
+  background: #ffffff;
+  border-radius: 10px;
+  box-shadow: 0 4px 12px rgba(0, 126, 122, 0.1);
+  padding: 30px;
+  margin-bottom: 20px;
+  transition: transform 0.3s ease;
+  border-left: 6px solid #007E7A;
+  max-width: 1200px;
+  width: 100%;
+}
+
+.dashboard-card:hover {
+  transform: translateY(-5px);
+}
+
+.status {
+  font-size: 1.3rem;
+  font-weight: bold;
+}
+
+.progress-bar {
+  height: 20px;
+  border-radius: 20px;
+}
+.table th, .table td {
+  vertical-align: middle;
+}
+
+.table-bordered {
+  border: 2px solid #ddd;
+}
+
+.table-hover tbody tr:hover {
+  background-color: #f0f8f8;
+}
+
+.header {
+  font-size: 2rem;
+  font-weight: 700;
+  margin-bottom: 20px;
+  color: #007E7A;
+  text-align: center;
+  text-shadow: 1px 1px #c0f0ed;
+}
+
+.dashboard-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 30px;
+  flex-wrap: wrap;
+}
+
+.btn-back {
+  font-size: 1.1rem;
+  padding: 10px 20px;
+  border-radius: 5px;
+  background-color: #007E7A;
+  color: #fff;
+  border: none;
+  text-decoration: none;
+  transition: background-color 0.3s ease;
+}
+
+.btn-back:hover {
+  background-color: #005f5c;
+}
+
+.card-title {
+  font-size: 1.5rem;
+  margin-bottom: 15px;
+  color: #C0305E;
+}
+
+.card-body {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.table-responsive {
+  overflow-x: auto;
+}
+
+/* Responsivo (pequenas melhorias visuais apenas) */
+@media (max-width: 768px) {
+  .dashboard-card {
+    padding: 20px;
   }
-  /* Ícone lâmpada quebrada animada */
-  .lamp-container {
-    width: 80px;
-    margin: 0 auto 30px;
-    filter: drop-shadow(0 0 3px rgba(0,0,0,0.15));
+
+  .status {
+    font-size: 1rem;
   }
-  .broken-lamp {
-    animation: shake 1.5s infinite;
-    transform-origin: 50% 90%;
+
+  .btn-back {
+    font-size: 1rem;
   }
-  @keyframes shake {
-    0%, 100% { transform: rotate(0deg); }
-    25% { transform: rotate(10deg); }
-    50% { transform: rotate(-10deg); }
-    75% { transform: rotate(8deg); }
+
+  .header {
+    font-size: 1.5rem;
   }
-  /* Rodapé simples */
-  .footer {
-    font-size:0.85rem;
-    color:#999;
-    position: absolute;
-    bottom: 12px;
-    left: 0;
-    right: 0;
+}
+
+@media (max-width: 500px) {
+  table.table tbody tr td,
+  table.table thead tr th {
+    padding: 4px 6px;
+    font-size: 0.75rem;
   }
-</style>
+
+  .btn-back {
+    font-size: 1.3rem;
+    padding: 10px 20px;
+    border-radius: 5px;
+    background-color: #007E7A;
+    color: #fff;
+    text-decoration: none;
+    transition: background-color 0.3s ease, transform 0.3s ease;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .btn-back:hover {
+    background-color: #005f5c;
+    transform: scale(1.1);
+  }
+}
+
+/* Botão arredondado com seta (mobile) */
+@media (max-width: 450px) {
+  .btn-back {
+    font-size: 1.1rem;
+    width: 45px;
+    height: 45px;
+    border-radius: 50%;
+    padding: 0;
+    text-align: center;
+    box-shadow: 0 2px 6px rgba(0,0,0,0.3);
+  }
+
+  .btn-back::before {
+    content: "←";
+    color: white;
+    font-size: 1.6rem;
+  }
+
+  .btn-back span {
+    display: none;
+  }
+}
+
+@media (min-width: 450px) {
+  .btn-back {
+    font-size: 1.2rem;
+    padding: 12px 24px;
+    border-radius: 5px;
+  }
+
+  .btn-back::before {
+    content: "←";
+    color: white;
+    font-size: 1.4rem;
+  }
+
+  .btn-back span {
+    display: inline-block;
+    margin-left: 8px;
+  }
+}
+
+
+  </style>
 </head>
 <body>
 
-  <div class="container" role="main" aria-label="Sistema em manutenção">
-    <img src="image/vale2.png" alt="Logo Vale" />
-    <div class="lamp-container" aria-hidden="true">
-      <!-- SVG lâmpada quebrada -->
-      <svg class="broken-lamp" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64" fill="none" stroke="#007E7A" stroke-width="3" stroke-linecap="round" stroke-linejoin="round">
-        <path d="M32 2a14 14 0 0 0-14 14c0 5.256 3.03 10.07 7.5 12.19V34a2 2 0 0 0 4 0v-5.81C42.97 26.07 46 21.255 46 16a14 14 0 0 0-14-14z"/>
-        <path d="M32 34v10a6 6 0 0 0 12 0v-4" />
-        <path d="M32 44H22a6 6 0 0 0 0 12h20a6 6 0 0 0 0-12H34" />
-        <!-- rachadura -->
-        <line x1="32" y1="16" x2="38" y2="24" stroke="#c0305e" stroke-width="2" />
-        <line x1="38" y1="24" x2="34" y2="28" stroke="#c0305e" stroke-width="2" />
-        <line x1="34" y1="28" x2="40" y2="36" stroke="#c0305e" stroke-width="2" />
-      </svg>
-    </div>
-    <h1>Sistema em manutenção</h1>
-    <p class="message">Estamos ajustando tudo para você. Voltamos <strong>em breve</strong>!</p>
-
-    <div class="footer">© 2025 | Revezamento de equipes OP 1</div>
+  <!-- NOVO painel fixo pequeno e simples -->
+  <div id="status-summary">
+    <span class="status-pendente">🔴 <span id="pendente-summary">0</span> Pendentes</span>
+    <span class="status-andamento">🟡 <span id="andamento-summary">0</span> Andamento</span>
+    <span class="status-concluido">🟢 <span id="concluido-summary">0</span> Concluídas</span>
   </div>
+
+
+    <!-- Tabela de Pessoas -->
+    <div class="dashboard-card">
+      <h3 style="text-align: center; font-size: 1.14rem; margin-top: -20px;">Em ordem de conclusão</h3>
+      <table class="table table-bordered table-hover">
+        <thead>
+          <tr>
+            <th>Status</th>
+            <th>Nome</th>
+            <th>Local</th>
+            <th>Início</th>
+            <th>Final</th>
+          </tr>
+        </thead>
+        <tbody id="tabelaDashboard"></tbody>
+      </table>
+    </div>
+
+  </div>
+
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <script>
+  function carregarDashboard() {
+    fetch('/pessoas')
+      .then(res => res.json())
+      .then(data => {
+        const pendente = data.filter(p => p.status === '🔴').length;
+        const andamento = data.filter(p => p.status === '🟡').length;
+        const concluido = data.filter(p => p.status === '✅').length;
+        const total = data.length;
+
+        // Atualiza o resumo fixo pequeno no topo
+        document.getElementById('pendente-summary').textContent = pendente;
+        document.getElementById('andamento-summary').textContent = andamento;
+        document.getElementById('concluido-summary').textContent = concluido;
+
+        // Tabela (mantém igual)
+        const tbody = document.getElementById('tabelaDashboard');
+        tbody.innerHTML = '';
+        data.sort((a, b) => {
+          const [ha, ma] = (a.hora_inicio || '99:99').split(':');
+          const [hb, mb] = (b.hora_inicio || '99:99').split(':');
+          return (+ha * 60 + +ma) - (+hb * 60 + +mb);
+        }).forEach(p => {
+          const tr = document.createElement('tr');
+          tr.innerHTML = `
+            <td class="status ${p.status === '🔴' ? 'status-pendente' : p.status === '🟡' ? 'status-andamento' : 'status-concluido'}">${p.status}</td>
+            <td>${p.nome}</td>
+            <td>${p.local || '-'}</td>
+            <td>${p.hora_inicio || '-'}</td>
+            <td>${p.hora_fim || '-'}</td>
+          `;
+          tbody.appendChild(tr);
+        });
+
+        // Gráficos
+        if(typeof gerarGraficos === 'function') gerarGraficos(data);
+      });
+  }
+
+  // Atualiza a cada 5 segundos
+  setInterval(carregarDashboard, 5000);
+
+  document.addEventListener('DOMContentLoaded', carregarDashboard);
+  </script>
 
 </body>
 </html>
