--- a/public/local.html
+++ b/public/local.html
@@ -1,98 +1,349 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Revezamento - Manutenção</title>
-<link rel="icon" type="image/png" href="image/vale.png" />
-<style>
-  * {
-    margin:0; padding:0; box-sizing:border-box; font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Locais - Revezamento Turma B</title>
+  <link rel="icon" type="image/png" href="image/vale.png" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <link rel="stylesheet" href="style.css" />
+
+  <style>
+body {
+  
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 15px;
+}
+
+
+    .card-local {
+      margin-bottom: 1.5rem;
+      border-left: 6px solid #007E7A;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.05);
+    }
+
+    .card-local .card-header {
+      background-color: #f4f6f7;
+      font-weight: bold;
+      color: #007E7A;
+    }
+    .card-header {
+      display: flex;
+      flex-direction: row;
+      gap: 10px;
+      font-size: 0.80rem;
+    }
+  
+    .pessoa-item {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      border-bottom: 1px solid #eee;
+      padding: 0.5rem 0;
+    }
+
+    .status {
+      font-weight: bold;
+      color: #007E7A;
+    }
+
+    .hora {
+      font-size: 0.85rem;
+      color: #555;
+    }
+
+    .titulo-app {
+      font-size: clamp(1.2rem, 4vw, 1.8rem);
+      font-weight: 700;
+      font-family: 'Segoe UI', sans-serif;
+      color: #007E7A;
+    }
+
+    .logo {
+      max-width: 40px;
+      margin-right: 8px;
+    }
+
+    .data-header {
+      font-size: 0.9rem;
+      color: #666;
+      text-align: center;
+      margin-bottom: 0.5rem;
+    }
+
+    .btn-voltar {
+      position: fixed;
+      top: 8px;
+      left: 10px;
+      z-index: 1000;
+      font-size: 0.9rem;
+      background: #007bff10;
+      color: #007bff;
+      border: none;
+      padding: 5px 10px;
+      border-radius: 20px;
+    }
+
+    .btn-voltar:hover {
+      background: #007bff30;
+      color: white;
+    }
+    .hora {
+      display: flex;
+      flex-direction: row;
+    }
+
+    @media (max-width: 600px) {
+      .pessoa-item {
+        flex-direction: row;
+        align-items: flex-start;
+      }
+    }
+    #locaisContainer {
+  display: grid;
+  grid-template-columns: 1fr; /* 1 coluna por padrão (mobile) */
+  gap: 1.5rem; /* espaçamento entre os cards */
+}
+
+@media (min-width: 768px) {
+  #locaisContainer {
+    grid-template-columns: repeat(2, 1fr); /* 2 colunas em telas médias para cima */
   }
-  body, html {
-    height:100%;
-    display:flex;
-    justify-content:center;
-    align-items:center;
-    background:#f4f4f4;
+}
+body {
+  padding-top: 40px; /* espaço para o aviso não cobrir o conteúdo */
+}
+.btn-custom-voltar {
+  background-color: #007E7A;
+  color: #fff;
+  border: none;
+  padding: 4px 14px;
+  font-size: 0.95rem;
+  border-radius: 4px;
+  transition: background-color 0.3s ease;
+  text-decoration: none;
+  display: flex !important;
+  max-width: 80% !important; /* não deixa a largura passar do container */
+  box-sizing: border-box !important;
+  margin-right: 95%;
+}
+
+  @media (max-width: 600px) {
+      .btn-custom-voltar {
+      background-color: #007E7A;
+  padding: 4px 14px;
+  font-size: 0.95rem;
+  border-radius: 4px;
+  transition: background-color 0.3s ease;
+  display: flex !important;
+  max-width: 80% !important; /* não deixa a largura passar do container */
+  box-sizing: border-box !important;
+  margin-right: 83%;
+  margin-top: -3px;
+}
+    }
+.btn-custom-voltar:hover {
+  background-color: #005f5c;
+  color: #fff;
+}
+.cabecalho-app {
+  background-color: #e6f2f2; /* cor suave próximo ao verde petróleo */
+  padding: 0.6rem 1rem;      /* menos espaçamento vertical */
+  border-bottom: 3px solid #007E7A; /* linha que delimita o header */
+  box-shadow: 0 2px 5px rgba(0, 126, 122, 0.1); /* sombra sutil */
+  margin-bottom: 1.5rem; /* espaço para separar do conteúdo */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 0.2rem;
+  margin-top: -36px;
+}
+
+.cabecalho-app .data-header {
+  margin-top: -08px !important;
+  font-weight: 600;
+  font-size: 0.95rem;
+  color: #004d4b;
+  text-transform: capitalize;
+  display: flex;
+}
+  @media (max-width: 450px) {
+    .cabecalho-app .data-header {
+  margin-top: 0 !important;
+  font-weight: 600;
+  font-size: 0.90rem;
+  color: #004d4b;
+  text-transform: capitalize;
+  display: flex;
+    }
+    .cabecalho-app {
+  background-color: #e6f2f2; /* cor suave próximo ao verde petróleo */
+  padding: 0.4rem 0.80rem;      /* menos espaçamento vertical */
+  border-bottom: 3px solid #007E7A; /* linha que delimita o header */
+  box-shadow: 0 2px 5px rgba(0, 126, 122, 0.1); /* sombra sutil */
+  margin-bottom: 0.80rem; /* espaço para separar do conteúdo */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 0.2rem;
+  margin-top: -36px;
+  border-radius: 2px;
+}
+.titulo-app {
+
+  font-weight: 700;
+  color: #007E7A;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  display: flex;
+  align-items: center;
+  margin-bottom: 5px !important;
+  gap: 1px;
+  margin: 0;
+}
   }
-  .container {
-    text-align:center;
-    padding:30px 20px 40px;
-    background:#fff;
-    border-radius:16px;
-    box-shadow:0 10px 25px rgba(0,0,0,0.1);
-    width:100%;
-    max-width:460px;
-    position: relative;
+
+
+.titulo-app {
+
+  font-weight: 700;
+  color: #007E7A;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  display: flex;
+  align-items: center;
+  margin-bottom: 20px !important;
+  gap: 5px;
+  margin: 0;
+}
+@media (max-width: 415px) {
+  .card-header {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 4px;
+    font-size: 0.95rem;
   }
-  .container img {
-    width:140px;
-    margin-bottom:25px;
+
+  .card-local .card-header .quantidade {
+    font-size: 0.85rem;
   }
-  h1 {
-    font-size:2.5rem;
-    color:#007E7A;
-    margin-bottom: 18px;
-    animation: pulse 2s infinite;
-  }
-  @keyframes pulse {
-    0%, 100% {opacity: 1;}
-    50% {opacity: 0.6;}
-  }
-  .message {
-    font-size:1.15rem;
-    color:#444;
-    margin-bottom: 30px;
-  }
-  /* Ícone lâmpada quebrada animada */
-  .lamp-container {
-    width: 80px;
-    margin: 0 auto 30px;
-    filter: drop-shadow(0 0 3px rgba(0,0,0,0.15));
-  }
-  .broken-lamp {
-    animation: shake 1.5s infinite;
-    transform-origin: 50% 90%;
-  }
-  @keyframes shake {
-    0%, 100% { transform: rotate(0deg); }
-    25% { transform: rotate(10deg); }
-    50% { transform: rotate(-10deg); }
-    75% { transform: rotate(8deg); }
-  }
-  /* Rodapé simples */
-  .footer {
-    font-size:0.85rem;
-    color:#999;
-    position: absolute;
-    bottom: 12px;
-    left: 0;
-    right: 0;
-  }
-</style>
+}
+
+
+
+  </style>
 </head>
-<body>
 
-  <div class="container" role="main" aria-label="Sistema em manutenção">
-    <img src="image/vale2.png" alt="Logo Vale" />
-    <div class="lamp-container" aria-hidden="true">
-      <!-- SVG lâmpada quebrada -->
-      <svg class="broken-lamp" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64" fill="none" stroke="#007E7A" stroke-width="3" stroke-linecap="round" stroke-linejoin="round">
-        <path d="M32 2a14 14 0 0 0-14 14c0 5.256 3.03 10.07 7.5 12.19V34a2 2 0 0 0 4 0v-5.81C42.97 26.07 46 21.255 46 16a14 14 0 0 0-14-14z"/>
-        <path d="M32 34v10a6 6 0 0 0 12 0v-4" />
-        <path d="M32 44H22a6 6 0 0 0 0 12h20a6 6 0 0 0 0-12H34" />
-        <!-- rachadura -->
-        <line x1="32" y1="16" x2="38" y2="24" stroke="#c0305e" stroke-width="2" />
-        <line x1="38" y1="24" x2="34" y2="28" stroke="#c0305e" stroke-width="2" />
-        <line x1="34" y1="28" x2="40" y2="36" stroke="#c0305e" stroke-width="2" />
-      </svg>
+  
+
+  <header class="cabecalho-app text-center mb-4">
+    
+  <a href="app.html" class="btn btn-custom-voltar">Voltar</a>
+
+    <div class="data-header" id="dataAtual"></div>
+    <h1 class="titulo-app d-flex justify-content-center align-items-center">
+      <img src="image/vale.png" alt="Logo" class="logo" />Turma B - Locais
+    </h1>
+  </header>
+
+  <div id="locaisContainer" class="mb-5"></div>
+
+  <script>
+    function formatarHora(hora) {
+  if (!hora) return '-';
+  return hora.replace(/(\d{2}:\d{2})(:\d{2})/, "$1<span style='display: none;'>$2</span>");
+}
+
+
+    function carregarLocais() {
+      const nomesLocais = {
+    'X6': 'Espaço X6',
+    'X5': 'Espaço X5',
+    'Ctr': 'CTR',
+    'Comp': 'Composição',
+    'PIAL/OFC': 'PIAL / Oficina',
+    'VV': 'Virador de vagões'
+  };
+
+  fetch('/pessoas')
+    .then(res => res.json())
+    .then(pessoas => {
+       console.log(pessoas);
+      const locais = ['X6', 'X5','Ctr', 'Comp', 'PIAL/OFC', 'VV'];
+      const container = document.getElementById('locaisContainer');
+      container.innerHTML = '';
+
+      locais.forEach(local => {
+        // Filtra só quem está naquele local E com status 🟡 ou ✅
+        const pessoasNoLocal = pessoas.filter(p => 
+          p.local === local && (p.status === '🟡' || p.status === '✅')
+        );
+
+        const card = document.createElement('div');
+        card.className = 'card card-local';
+
+    card.innerHTML = `
+  <div class="card-header">
+    <div class="nome-local">${nomesLocais[local] || local}</div>
+    <div class="quantidade">
+      <span style="color: #666;">Quantidade de pessoas:</span>
+      <span style="color: #28a745; font-weight: bold;">${pessoasNoLocal.length}</span>
     </div>
-    <h1>Sistema em manutenção</h1>
-    <p class="message">Estamos ajustando tudo para você. Voltamos <strong>em breve</strong>!</p>
-
-    <div class="footer">© 2025 | Revezamento de equipes OP 1</div>
   </div>
+  <div class="card-body p-3" id="local-${local.replace('/', '-')}-body"></div>
+`;
 
+
+
+        container.appendChild(card);
+
+        const body = card.querySelector('.card-body');
+
+        if (pessoasNoLocal.length === 0) {
+          body.innerHTML = '<div class="text-muted">Ainda não há pessoas iniciadas neste local. .</div>';
+        } else {
+          // Ordena por hora_fim (mais próxima primeiro)
+pessoasNoLocal
+  .sort((a, b) => {
+    if (!a.hora_fim) return 1;
+    if (!b.hora_fim) return -1;
+    return a.hora_fim.localeCompare(b.hora_fim);
+  })
+  .forEach(p => {
+    const div = document.createElement('div');
+    div.className = 'pessoa-item';
+
+    div.innerHTML = `
+      <div>
+        <span class="status" style="margin-right: 8px;">${p.status}</span><strong>${p.nome}</strong>
+      </div>
+      <div class="hora">
+  <div>Fim: ${formatarHora(p.hora_fim)}</div>
+</div>
+
+    `;
+
+    body.appendChild(div);
+  });
+
+
+        }
+      });
+    });
+}
+
+
+    function formatarDataAtual() {
+      const hoje = new Date();
+      const opcoes = { weekday: 'long', day: 'numeric', month: 'long', year: 'numeric' };
+      const data = hoje.toLocaleDateString('pt-BR', opcoes);
+      document.getElementById('dataAtual').textContent = data.charAt(0).toUpperCase() + data.slice(1);
+    }
+
+    formatarDataAtual();
+    carregarLocais();
+
+    setInterval(carregarLocais, 5000); // auto atualização
+  </script>
 </body>
 </html>
