--- a/public/app.html
+++ b/public/app.html
@@ -53,7 +53,7 @@
 
   <div class="contato">
     <img src="https://cdn-icons-png.flaticon.com/512/733/733585.png" alt="WhatsApp">
-    <a href="https://wa.me/5598985761913" target="_blank">Me envie sugestões e melhorias</a>
+    <a href="https://wa.me/5598985761913" target="_blank">Enviem-me sugestões e melhorias.</a>
   </div>
 
 </body>
